Finish implementing basic library system

--- a/index.html
+++ b/index.html
@@ -14,17 +14,7 @@
         <h1>Library</h1>
     </header>
     <button id="book-button">Add book</button>
-    <div id="book-grid">
-        <div class="card">
-            <h2 class="card-text title">"Title"</h2>
-            <h2 class="card-text author">Author</h2>
-            <h2 class="card-text pages">123 pages</h2>
-            <div class="button-row">
-                <button class="card-button read-button">Read</button>
-                <button class="card-button remove">Remove</button>
-            </div>
-        </div>
-    </div>
+    <div id="book-grid"></div>
     <div id="form-container">
         <div id="form">
             <form id = "new-book">
